------------------------------------------------------
Release 2 | Beta 2 | Development 2 | Experimental 4

* Removed ControllerTest
* Removed ControllerUtils
* Removed ControllerRumbler
* Removed ControllerPov
* Removed ControllerPovEvent

* Updated to LWJGL 3

------------------------------------------------------
Release 2 | Beta 2 | Development 2 | Experimental 3

* Added new methods in the object classes

* Changed the default value of external to false, in
  ImageLoader

------------------------------------------------------
Release 2 | Beta 2 | Development 2 | Experimental 2

* Added WindowEventListener
* Added WindowEventListenerInterface
* Added WindowSizeEvent
* Added a resizable setting to the window settings

* Fixed bug: Running the engine on PC with with
  undecorated set to false, meant that using
  an orphographic projection had 0, 0 at the top
  left of the window instead of the viewable area
* Fixed some issues with the new fonts

------------------------------------------------------
Release 2 | Beta 2 | Development 2 | Experimental 1

* Added GUITextDisplayArea
* Added IntObj_TextDisplayArea
* Added FontUtilsPC
* Added FontPC
* Added BitmapFontUtilsPC
* Added BitmapFontUtilsAndroid
* Added FontAndroid
* Added FontUtilsAndroid
* Added TrueTypeFont

* Fixed bug: Android didn't render anything

* NOTE: You can now load true type fonts from files
  and use installed fonts

------------------------------------------------------
Release 2 | Beta 2 | Development 2 | Experimental 0

* Added DeferredScene
* Added GeometryBuffer
* Added DeferredTest
* Added the Shaders class within Settings.Resource
* Added deferred rendering
* Added some predefined array colours

* Created the package org.andor.experimental

* Rewritten the entire rendering system

* NOTE: Haven't tested rendering on Android yet

------------------------------------------------------
Release 2 | Beta 2 | Development 1 | Experimental 3

* Cleaned up code
