@@ -11,7 +11,27 @@ package org.andor.core.input;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.lwjgl.glfw.GLFW;
+
 public class Input {
+	
+	/* The different controllers */
+	public static final int CONTROLLER_1 = GLFW.GLFW_JOYSTICK_1;
+	public static final int CONTROLLER_2 = GLFW.GLFW_JOYSTICK_2;
+	public static final int CONTROLLER_3 = GLFW.GLFW_JOYSTICK_3;
+	public static final int CONTROLLER_4 = GLFW.GLFW_JOYSTICK_4;
+	public static final int CONTROLLER_5 = GLFW.GLFW_JOYSTICK_5;
+	public static final int CONTROLLER_6 = GLFW.GLFW_JOYSTICK_6;
+	public static final int CONTROLLER_7 = GLFW.GLFW_JOYSTICK_7;
+	public static final int CONTROLLER_8 = GLFW.GLFW_JOYSTICK_8;
+	public static final int CONTROLLER_9 = GLFW.GLFW_JOYSTICK_9;
+	public static final int CONTROLLER_10 = GLFW.GLFW_JOYSTICK_10;
+	public static final int CONTROLLER_11 = GLFW.GLFW_JOYSTICK_11;
+	public static final int CONTROLLER_12 = GLFW.GLFW_JOYSTICK_12;
+	public static final int CONTROLLER_13 = GLFW.GLFW_JOYSTICK_13;
+	public static final int CONTROLLER_14 = GLFW.GLFW_JOYSTICK_14;
+	public static final int CONTROLLER_15 = GLFW.GLFW_JOYSTICK_15;
+	public static final int CONTROLLER_16 = GLFW.GLFW_JOYSTICK_16;
 	
 	/* The input listeners */
 	public static List<InputListenerInterface> listeners = new ArrayList<InputListenerInterface>();
